# consumer-complaint-system

./: .env.example  .gitignore  README.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/chatmodes/: voidbeast-gpt41enhanced.chatmode.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/test/: setup.ts
shared/schemas/: complaint.json  consumer_form.json
